--- a/dashboard/passwordchange.html
+++ b/dashboard/passwordchange.html
@@ -67,31 +67,31 @@
 					<ul class="style-none">
 						<ul class="style-none">
 							<li class="plr"><a href="dashboard-index.html" class="d-flex w-100 align-items-center ">
-								<img src="images/icon/icon_1.svg" alt="">
+								<i class="bi bi-grid" style="font-size: 20px;"></i>
 								<span>Dashboard</span>
 							</a></li>
 							<li class="plr"><a href="message.html" class="d-flex w-100 align-items-center">
-								<img src="images/icon/icon_2.svg" alt="">
+								<i class="bi bi-chat-left-text" style="font-size: 20px;"></i>
 								<span>Message</span>
 							</a></li>
 							<li class="bottom-line pt-30 lg-pt-20 mb-40 lg-mb-30"></li>
 							<li><div class="nav-title">Profile</div></li>
 							<li class="plr"><a href="account-settings.html" class="d-flex w-100 align-items-center active">
-								<img src="images/icon/icon_3_active.svg" alt="">
+								<i class="bi bi-person" style="font-size:  20px;"></i>
 								<span>Profile</span>
 							</a></li>
 							<li class="plr"><a href="investment.html" class="d-flex w-100 align-items-center">
-								<img src="images/icon/icon_5.svg" alt="">
+								<i class="bi bi-briefcase" style="font-size: 20px;"></i>
 								<span>Investments</span>
 							</a></li>
 							<li class="bottom-line pt-30 lg-pt-20 mb-40 lg-mb-30"></li>
 							<li><div class="nav-title">Cash Flow</div></li>
 							<li class="plr"><a href="fundaccount.html" class="d-flex w-100 align-items-center">
-								<img src="images/icon/icon_6.svg" alt="">
+								<i class="bi bi-coin" style="font-size: 20px;"></i>
 								<span>Deposit</span>
 							</a></li>
 							<li class="plr"><a href="withdraw.html.html" class="d-flex w-100 align-items-center">
-								<img src="images/icon/icon_7.svg" alt="">
+								<i class="bi bi-bank" style="font-size: 20px;"></i>
 								<span>Withdraw</span>
 							</a></li>
 	
@@ -102,12 +102,12 @@
 								<span>Deposit History</span>
 							</a></li>
 							<li class="plr"><a href="withdrawlog.html" class="d-flex w-100 align-items-center">
-								<img src="images/icon/icon_7.svg" alt="">
+								<img src="images/icon/icon_6.svg" alt="">
 								<span>Withdraw History</span>
 							</a></li>
 	
 							<li class="plr"><a href="investmentlog.html" class="d-flex w-100 align-items-center">
-								<img src="images/icon/icon_7.svg" alt="">
+								<img src="images/icon/icon_6.svg" alt="">
 								<span>Investment History</span>
 							</a></li>
 						
