--- a/dashboard/review.html
+++ b/dashboard/review.html
@@ -66,17 +66,17 @@
 				<nav class="dasboard-main-nav pt-30 pb-30 bottom-line">
 					<ul class="style-none">
 						<li class="plr"><a href="dashboard-index.html" class="d-flex w-100 align-items-center">
-							<img src="images/icon/icon_1.svg" alt="">
+							<i class="bi bi-grid" style="font-size: 20px;"></i>
 							<span>Dashboard</span>
 						</a></li>
 						<li class="plr"><a href="message.html" class="d-flex w-100 align-items-center">
-							<img src="images/icon/icon_2.svg" alt="">
+							<i class="bi bi-chat-left-text" style="font-size: 20px;"></i>
 							<span>Message</span>
 						</a></li>
 						<li class="bottom-line pt-30 lg-pt-20 mb-40 lg-mb-30"></li>
 						<li><div class="nav-title">Profile</div></li>
 						<li class="plr"><a href="profile.html" class="d-flex w-100 align-items-center">
-							<img src="images/icon/icon_3.svg" alt="">
+							<i class="bi bi-person" style="font-size:  20px;"></i>
 							<span>Profile</span>
 						</a></li>
 						<li class="plr"><a href="account-settings.html" class="d-flex w-100 align-items-center">
