--- a/dashboard/account-settings.html
+++ b/dashboard/account-settings.html
@@ -27,6 +27,7 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" media="all">
 	<!-- Main style sheet -->
+	<link rel="stylesheet" type="text/css" href="../css/styleFile.css" media="all">
 	<link rel="stylesheet" type="text/css" href="../css/style.css" media="all">
 	<!-- responsive style sheet -->
 	<link rel="stylesheet" type="text/css" href="../css/responsive.css" media="all">
@@ -84,7 +85,7 @@
 							<i class="bi bi-coin" style="font-size: 20px;"></i>
 							<span>Deposit</span>
 						</a></li>
-						<li class="plr"><a href="withdraw.html.html" class="d-flex w-100 align-items-center">
+						<li class="plr"><a href="withdraw.html" class="d-flex w-100 align-items-center">
 							<i class="bi bi-bank" style="font-size: 20px;"></i>
 							<span>Withdraw</span>
 						</a></li>
@@ -140,6 +141,12 @@
 						<form action="#" class="search-form ms-auto">
 							
 						</form>
+						<div class="profile-notification position-relative dropdown-center ms-3 ms-md-5 me-4">
+							<button class="noti-btn dropdown-toggle" type="button" id="notification-dropdown" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+								<img src="" style="background-color: lightgrey; width: 50px; height: 50px; border-radius: 50px;" alt="" class="lazy-img" id="profile-pics" />
+								<div style="background-color:green !important;" class="badge-pill"></div>
+							</button>
+						</div>
 						<!--<div class="profile-notification position-relative dropdown-center ms-3 ms-md-5 me-4">
 							<button class="noti-btn dropdown-toggle" type="button" id="notification-dropdown" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
 								<img src="../images/lazy.svg" data-src="images/icon/icon_11.svg" alt="" class="lazy-img">
@@ -190,6 +197,16 @@
                     <h4 class="dash-title-three">Edit & Update</h4>
                     <form action="#">
                         <div class="row">
+							<div class="col-lg-12">
+                                <div class=" mb-20" style="background-color: transparent;">
+									<img src="" id="pics" alt="" style="background-color: lightgrey; width:80px; height: 80px;" width="80px" height="80px" style="margin-left: -0px;" />
+                                    <input id="photo" type="file" class="custom-file-input">
+									<p id="file-name"></p>
+									<button style="background-color: #FF6725; box-shadow: 0px 0px 15px 1px rgba(100,100,100,0.2); color: white; font-size: 13px; padding: 5px 10px; border-radius: 3px;" onclick="changePhoto()">Update Photo</button>
+                                </div>
+                                <!-- /.dash-input-wrapper -->
+                            </div>
+
                             <div class="col-lg-12">
                                 <div class="dash-input-wrapper mb-20">
                                     <label for="">Username</label>
@@ -290,13 +307,16 @@
 	<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-storage.js"></script>
 
 	<script src="../js/config.js" ></script>
 	<script src="../js/logout.js" ></script>
-	<script src="../js/updateProfile.js"></script>	
+	<script src="../js/userprofileAccount.js"></script>	
+	<!--<script src="../js/userprofile.js"></script>-->	
+	<script src="../js/changePhoto.js"></script>
+	<script src="../js/updateProfile.js"></script>
 	<script src="../js/password.js"></script>	
-	
-	<script src="../js/userprofile.js"></script>
+
 	<!--<script src="../js/update.js" ></script>-->
 	
 </body>
