--- a/dashboard/estateinvest1.html
+++ b/dashboard/estateinvest1.html
@@ -144,6 +144,13 @@
 						<form action="#" class="search-form ms-auto">
 							
 						</form>
+
+						<div class="profile-notification position-relative dropdown-center ms-3 ms-md-5 me-4"></div>
+							<button class="noti-btn dropdown-toggle" type="button" id="notification-dropdown" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+								<img src="" style="background-color: lightgrey; width: 50px; height: 50px; border-radius: 50px;" alt="" class="lazy-img" id="profile-pics" />
+								<div style="background-color:green !important;" class="badge-pill"></div>
+							</button>
+						</div>
 						<!--<div class="profile-notification position-relative dropdown-center ms-3 ms-md-5 me-4">
 							<button class="noti-btn dropdown-toggle" type="button" id="notification-dropdown" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
 								<img src="../images/lazy.svg" data-src="images/icon/icon_11.svg" alt="" class="lazy-img">
@@ -310,7 +317,7 @@
 	<script src="../js/config.js" ></script>
 	
 	<script src="../js/logout.js" ></script>
-	<script src="../js/userprofile.js"></script>
+	<script src="../js/userprofileE1.js"></script>
 
 	<script src="../js/estateinvest1.js"></script>
 </body>
