--- a/about.html
+++ b/about.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-QSSY7BQ7GM"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-QSSY7BQ7GM');
+	</script>
 	<meta charset="UTF-8">
 	<meta name="keywords" content="Real estate, Property sale, Property buy">
 	<meta name="description" content=".">
