--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
 							</div>
 							<div class="row">
 								<div class="col-sm-6">
-									<a href="#" class="social-use-btn d-flex align-items-center justify-content-center tran3s w-100 mt-10">
+									<a href="" onclick="signWithGoogle()" class="social-use-btn d-flex align-items-center justify-content-center tran3s w-100 mt-10">
 										<img src="images/icon/google.png" alt="">
 										<span class="ps-3">Signup with Google</span>
 									</a>
@@ -1054,6 +1054,7 @@
 
 		<script src="js/config.js" ></script>
 		<script src="js/signup.js" ></script>
+		<script src="js/google.js"></script>
 		<script src="js/login.js" ></script>
 		<script src="js/newsletter.js"></script>
 		<script src="js/estimateForm"></script>
