--- a/dashboard/dashboard-index.html
+++ b/dashboard/dashboard-index.html
@@ -301,7 +301,7 @@
 		<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
-
+		<!-- <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-storage.js"></script> -->
 		<script src="../js/config.js" ></script>
 		
 		<script src="../js/logout.js" ></script>
